use more reasonable gwt:compile memory defaults, parameterize localWorkers